# interviews

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
challenges/: step_2.txt
lib/: send_command_to_server.py
lib/challenges/hello_world/: hello_world.py
lib/challenges/supermarket/: __init__.py  checkout.py  checkout_solution.py  constants.py  data_models.py  step_4.txt  utils.py
lib/runner/: credentials_config_file.py  utils.py
lib/solutions/hello_world/: hello_solution.py
lib/solutions/supermarket/: checkout.py  checkout_solution.py  step_1.txt  step_3.txt
tests/lib/test_challenges/test_hello_world/: test_hello_solution.py
tests/lib/test_solutions/test_hello_world/: conftest.py  test_hello_solution.py
tests/lib/test_solutions/test_supermarket/: conftest.py  test_hello_solution.py
tests/lib/test_supermarket/: test_checkout.py  test_supermarket.py
